--- a/todo/plusstyles.css
+++ b/todo/plusstyles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Gaegu', cursive;
+  font-family: "Gaegu", cursive;
 }
 .datebox {
   position: absolute;
@@ -24,8 +24,8 @@ body {
   box-shadow: 0px 0px 1px 4px white;
 }
 
-input[type='text'] {
-  font-family: 'Gaegu', cursive;
+input[type="text"] {
+  font-family: "Gaegu", cursive;
   width: 250px;
   height: 30px;
   background-color: hsl(240, 2%, 69%);
@@ -78,4 +78,47 @@ input[type='text'] {
   height: 330px;
   width: 330px;
   margin: 10px;
+}
+
+.maintitle {
+  width: 250px;
+  position: absolute;
+  top: 25%;
+  left: 14%;
+  font-size: 22px;
+}
+
+.clock {
+  width: 300px;
+  font-size: 26px;
+  color: white;
+  text-shadow: 1px 1px 5px rgb(0, 0, 0);
+  position: relative;
+  top: 5%;
+  left: 14.5%;
+}
+
+.goindex {
+  position: relative;
+  top: 21%;
+  left: 38%;
+  border: none;
+  background-color: hsl(240, 2%, 69%);
+}
+
+.main > p {
+  position: relative;
+  top: 13%;
+  font-size: 24px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 33px;
+}
+
+.main > p:last-child {
+  margin-top: 30px;
+  font-size: 20px;
+  color: #818181;
 }
