--- a/todo/styles.css
+++ b/todo/styles.css
@@ -1,11 +1,11 @@
-@import 'reset.css';
+@import "reset.css";
 
 body {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  font-family: 'Gaegu', cursive;
+  font-family: "Gaegu", cursive;
 }
 #all {
   width: 320px;
@@ -29,14 +29,14 @@ body {
 
 #today {
   position: relative;
-  left: 25%;
+  left: 20%;
   margin-bottom: 20px;
   background-color: white;
-  padding: 10px;
+  padding: 5px;
   border: 3px solid rgb(253, 127, 127);
   border-radius: 10px;
   box-shadow: 0px 0px 1px 6px white;
-  width: 150px;
+  width: 180px;
   height: 30px;
   font-size: 20px;
   font-weight: 600;
@@ -83,4 +83,9 @@ body {
 
 .face > i {
   margin: 2px;
+}
+
+.face > button {
+  border: none;
+  background-color: white;
 }
